--- a/index.html
+++ b/index.html
@@ -40,22 +40,18 @@
             <li><a href="./html/blog.html">Blog</a></li>
             <li><a href="#footer">About Us</a></li>
             <li id="account-open-nav">
-              <a href="./html/account.html"
-              ><button id="accountButton" class="nav__action btn">
+              <button id="accountButton_1" class="nav__action btn">
                 <span><i class="fa-solid fa-user"></i></span> Account
-              </button></a
-            >
+              </button>
             </li>
           </ul>
           <div class="nav__menu__btn" id="menu-btn">
             <i class="fa-solid fa-bars"></i>
           </div>
           <div class="nav__action__btn">
-            <a href="./html/account.html"
-              ><button id="accountButton" class="nav__action btn">
-                <span><i class="fa-solid fa-user"></i></span> Account
-              </button></a
-            >
+            <button id="accountButton_2" class="nav__action btn">
+              <span><i class="fa-solid fa-user"></i></span> Account
+            </button>
           </div>
         </div>
       </nav>
@@ -201,6 +197,8 @@
     </section>
 
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="../js/nav.js"></script>
+
     <script src="./js/index.js"></script>
   </body>
 </html>
