--- a/html/account.html
+++ b/html/account.html
@@ -33,22 +33,18 @@
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="../index.html#footer">About Us</a></li>
             <li id="account-open-nav">
-              <a href="./register.html"
-                ><button id="accountButton" class="nav__action btn">
-                  <span><i class="fa-solid fa-user"></i></span> Account
-                </button></a
-              >
+              <button id="accountButton_1" class="nav__action btn">
+                <span><i class="fa-solid fa-user"></i></span> Account
+              </button>
             </li>
           </ul>
           <div class="nav__menu__btn" id="menu-btn">
             <i class="fa-solid fa-bars"></i>
           </div>
           <div class="nav__action__btn">
-            <a href="./register.html"
-              ><button id="accountButton" class="nav__action btn">
-                <span><i class="fa-solid fa-user"></i></span> Account
-              </button></a
-            >
+            <button id="accountButton_2" class="nav__action btn">
+              <span><i class="fa-solid fa-user"></i></span> Account
+            </button>
           </div>
         </div>
       </nav>
@@ -64,10 +60,10 @@
           </div>
           <div class="card-content d-flex flex-column align-items-center">
             <h4 class="pt-2" id="account_name">SomeOne Famous</h4>
-            <h5 id="account_job">Creative Desinger</h5>
+            <h5 id="account_email">Creative Desinger</h5>
             <div class="account_analysis">
               <div id="post_qty"><span>100</span> posts</div>
-              <div id="follower_qty"><span>100</span>  followers</div>
+              <div id="follower_qty"><span>100</span> followers</div>
               <div id="add_btn">
                 <button><i class="fa-solid fa-circle-plus"></i></button>
               </div>
@@ -131,6 +127,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../js/nav.js"></script>
     <script src="../js/index.js"></script>
     <script src="../js/account.js"></script>
   </body>
