--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/blog.css" />
     <link rel="stylesheet" href="./css/postDetail.css" />
-    <link rel="stylesheet" href="./css/register.css" />
     <link rel="stylesheet" href="./css/account.css" />
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/register.css" />
   </head>
-  <body id= "app">
+  <body id="app">
     <script type="module" src="./app.js"></script>
   </body>
 </html>
