--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="./css/account.css" />
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/register.css" />
+    <link rel="stylesheet" href="./css/createPost.css">
   </head>
   <body id="app">
     <script type="module" src="./app.js"></script>
