--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     <link rel="stylesheet" href="./css/account.css" />
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/register.css" />
-    <link rel="stylesheet" href="./css/createPost.css">
+    <link rel="stylesheet" href="./css/createPost.css" />
   </head>
   <body id="app">
     <script type="module" src="./app.js"></script>
+
+    <!-- <script src="./js/postDetail.js"></script> -->
   </body>
 </html>
